@@ -1,3 +1,7 @@
+2001-05-12  Hans Petter Jansson  <hpj@ximian.com>
+
+	* time-conf.in: Fixed timezone write bug.
+
 2001-05-10  Hans Petter Jansson  <hpj@ximian.com>
 
 	* report.pl.in: Added new key to message table.
